packages/example/content/boomerang-cicd/7.0.0/introduction/00.overview.md
---
title: Overview
index: 0
---

# Overview

Boomerang CICD is a modern continuous integration (CI) and continuous delivery (CD) service. Built cloud-native on top of Kubernetes with support for additional orchestration tools including IBM UrbanCode Deploy as an  alternative worker system for Mobile specific implementations.

Boomerang CICD takes a hybrid approach combining a modern distributed build system with centralized enterprise governance using scalable infrastructure.

- Self Service Onboarding
- View activity and results
- View the full pipeline and information on each stage such as currently deployed verison
- Keep your configuration with your code
- Slack integration
- Run your tests in parallel
- Dedicated build environment on demand for predictable and repeatable builds
- Secure self contained distributed workers - no more worrying about security!

The solution is broken up into some distinct areas;
- Components: Engine room for git repository integration, configuration, and activity.
- Pipelines: rapidly build, test and deploy applications by wiring together stages
- Scorecard: view point in time quality across a wide spectrum of metrics
- Insights: view application quality and trends over time
- Policies: to create policies and quality gates
- Lib: to manage libraries
- Manage: System, Global, and Team level configuration and management