packages/example/content/boomerang-cicd/7.2.0/introduction/00.overview.md
---
title: Overview
index: 0
---

# Overview

Boomerang CICD is a modern continuous integration (CI) and continuous delivery (CD) service. Built cloud-native on top of Kubernetes with support for additional orchestration tools including IBM UrbanCode Deploy as an  alternative worker system for Mobile specific implementations.

Boomerang CICD takes a hybrid approach combining a modern distributed build system with centralized enterprise governance using scalable infrastructure.

- Self Service Onboarding
- View activity and results
- View the full pipeline and information on each stage such as currently deployed verison
- Keep your configuration with your code
- Slack integration
- Run your tests in parallel
- Dedicated build environment on demand for predictable and repeatable builds
- Secure self contained distributed workers - no more worrying about security!

The solution is broken up into some distinct areas;
- Components: Engine room for git repository integration, configuration, and activity.
- Pipelines: rapidly build, test and deploy applications by wiring together stages
- Scorecard: view point in time quality across a wide spectrum of metrics
- Insights: view application quality and trends over time
- Policies: to create policies and quality gates
- Lib: to manage libraries
- Manage: System, Global, and Team level configuration and management

## Users

Boomerang CICD has been built for the following types of user interactions and managed services.

### Fully Managed as a Service

To support an end user as a managed service where we provide the operational capability to ensure everything is done and the delivery / development team doesnt have to be concerned with DevOps or automation.

### Managed as a Service with Configurations

Middle ground with managed operational capability however end user drives customizations and alterations. This can be done eitehr by: properties and settings, or by a multi stage Dockerfile.

### Customized as a Service

Fully customized with the end user able to provide their own scripts and own tasks for an activity.